@@ -5,8 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 ; Note : %date% will be auto replaced by current year !Don't translate
 
-FOOTER="Footer"
-FOOTER_LINE1="Copyright &#169; %date% %sitename%. All Rights Reserved."
-FOOTER_LINE2="<a href="_QQ_"http://www.joomla.org"_QQ_">Joomla!</a> is Free Software released under the <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License.</a>"
+MOD_FOOTER_LINE1="Copyright &#169; %date% %sitename%. All Rights Reserved."
+MOD_FOOTER_LINE2="<a href="_QQ_"http://www.joomla.org"_QQ_">Joomla!</a> is Free Software released under the <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License.</a>"
 MOD_FOOTER="Footer"
-DESCFOOTER="This module shows the Joomla! copyright information."
+MOD_FOOTER_XML_DESCRIPTION="This module shows the Joomla! copyright information."
