@@ -16,10 +16,10 @@ $cur_year	= $date->toFormat('%Y');
 $csite_name	= $app->getCfg('sitename');
 
 if (JString::strpos(JText :: _('FOOTER_LINE1'), '%date%')) {
-	$line1 = ereg_replace('%date%', $cur_year, JText :: _('FOOTER_LINE1'));
+	$line1 = ereg_replace('%date%', $cur_year, JText :: _('MOD_FOOTER_LINE1'));
 }
 else {
-	$line1 = JText :: _('FOOTER_LINE1');
+	$line1 = JText :: _('MOD_FOOTER_LINE1');
 }
 
 if (JString::strpos($line1, '%sitename%')) {
