@@ -11,4 +11,4 @@
 defined('_JEXEC') or die;
 ?>
 <div><?php echo $lineone; ?></div>
-<div><?php echo JText::_('FOOTER_LINE2'); ?></div>
+<div><?php echo JText::_('MOD_FOOTER_LINE2'); ?></div>
