@@ -35,6 +35,7 @@ $ -> Language fix or change
 + Translated components admin submenus
 ^ Refactored mod_banners ini/keys
 ^ Refactored mod_breadcrumbs ini/keys
+^ Refactored mod_footer ini/keys
 
 09-Feb-2010 Jean-Marie Simonet
 ^ Refactored mod_articles_archived ini/keys. Updated sql.
